# RinC320

./: Dockerfile  tailwind.config.ts  vite.config.ts
server/: Cargo.toml
server/src/: main.rs
src/: App.tsx  main.tsx
src/components/: CommandPanel.tsx  ExportControls.tsx  HealthCheck.tsx  LogsPanel.tsx  ScaleCard.tsx  made-with-dyad.tsx
src/components/layout/: MainLayout.tsx  Navbar.tsx  Sidebar.tsx
src/components/pins/: IoGroupControls.tsx
src/components/ui/: StatusBadge.tsx
src/config/: protocols.ts
src/context/: AppContext.tsx
src/hooks/: useAppScaleMonitor.tsx  useScaleIndication.tsx
src/pages/: ComingSoonPage.tsx  DashboardPage.tsx  Index.tsx  NotFound.tsx  RinstrumMonitorPage.tsx
src/pages/configurations/: ConfigurationForm.tsx  ConfigurationsPage.tsx  NewConfigurationPage.tsx  ScaleForm.tsx
src/pages/devices/: DevicesPage.tsx  IoDeviceForm.tsx
src/pages/groups/: GroupForm.tsx  GroupsPage.tsx
src/pages/hosts/: HostForm.tsx  HostsPage.tsx
src/pages/indications/: IndicationsPage.tsx
src/pages/monitor/: MonitorPage.tsx  MonitorView.tsx
src/pages/pins/: PinsPage.tsx
src/pages/printers/: PrinterForm.tsx  PrintersPage.tsx
src/pages/scale/: HistoryChart.tsx  ScaleMonitor.tsx  ScaleMonitorView.tsx  SettingsPanel.tsx  useScaleMonitor.tsx
src/pages/templates/: TemplateForm.tsx  TemplatesPage.tsx
src/pages/weighing-list/: WeighingListPage.tsx
src/types/: index.ts
